# openeuler-ummu

./: CMakeLists.txt  LICENSE  README.md  ummu_common.c  ummu_common.h  ummu_level_block.c  ummu_level_block.h  ummu_log.h  ummu_main.c  ummu_map.c  ummu_map.h  ummu_mapt.c  ummu_mapt.h  ummu_queue.c  ummu_queue.h  ummu_resource.c  ummu_resource.h  ummu_seg_mng.c  ummu_seg_mng.h  ummu_seg_tree.cpp  ummu_seg_tree.h  ummu_utils.cpp  ummu_utils.h
doc/: API.md  Design.md
doc/man3/: libummu.3
include/: ummu_api.h
kernel_headers/: ummu_core.h
